fix: fixed compare screen bug, fix: fixed overflow error

--- a/assets/main.css
+++ b/assets/main.css
@@ -20,10 +20,6 @@
 		--color-svg-1: invert();
 		--color-svg: ;
 		--bg: linear-gradient(0deg, rgba(16, 22, 35, 1) 0%, var(--color-top-dark) 100%);
-
-		width: 100vw;
-		height: 100vh;
-		overflow: hidden;
 	}
 
 	.light {
